chore: bg bleed fix

--- a/src/components/reusable/table/table-cell.scss
+++ b/src/components/reusable/table/table-cell.scss
@@ -7,11 +7,12 @@
   vertical-align: middle;
   padding: var(--kd-spacing-16);
   color: var(--kd-color-text-level-primary);
-  border-bottom: 1px solid var(--kd-color-border-variants-light);
+  border-bottom: 1px solid var(--kd-color-border-level-tertiary);
   max-width: var(--kyn-td-max-width, none);
   width: var(--kyn-td-width, auto);
   min-width: var(--kyn-td-min-width, auto);
   font-weight: var(--kyn-td-font-weight);
+  box-shadow: var(--kyn-td-box-shadow, none);
 }
 
 .slot-wrapper {
