--- a/src/components/reusable/table/table-foot.scss
+++ b/src/components/reusable/table/table-foot.scss
@@ -15,6 +15,7 @@
   position: sticky;
   bottom: 0;
   z-index: 2;
+  --kyn-td-box-shadow: 0 8px 0 0 var(--kd-color-background-page-default);
 }
 
 ::slotted(kyn-tr) {
